Super simple AJAX form submission is working now.

--- a/uploader/templates/uploader/header.html
+++ b/uploader/templates/uploader/header.html
@@ -2,4 +2,4 @@
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
-<p style="text-align:center"><a href="{% url 'home' %}">view files</a>	<a href="{% url 'data_file_upload' %}">add file</a></p>
+<p style="text-align:center"><a href="{% url 'uploader:home' %}">view files</a>	<a href="{% url 'uploader:data_file_upload' %}">add file</a></p>
